--- a/app/views/admin/survey_templates/index.html.erb
+++ b/app/views/admin/survey_templates/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @surveys.each do |survey| %>
       <tr>
-        <td><%= link_to survey.title, edit_admin_survey_template_path(survey.id) %></td>
+        <td><%= link_to survey.title, edit_admin_survey_template_path(survey) %></td>
         <td><%= link_to 'Destroy', admin_survey_template_path(survey), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
