--- a/app/views/admin/survey_templates/edit.html.erb
+++ b/app/views/admin/survey_templates/edit.html.erb
@@ -1,5 +1,23 @@
 <h1>Editing Admin Survey Template</h1>
 
-<%= render 'form', template: @template %>
+<%= form_tag admin_survey_template_path, method: :put do %>
+  <% if @template.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@template.errors.count, "error") %> prohibited this template from being saved:</h2>
+
+      <ul>
+      <% @template.errors.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <%= label_tag :survey, 'Survey json' %>
+  <%= text_area_tag :survey, @template.content, size: '60x30' %>
+
+  <div class="actions">
+    <%= submit_tag 'Update' %>
+  </div>
+<% end %>
 
 <%= link_to 'Back', admin_survey_templates_path %>
